# litellm-a2a-settlement

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ci-local.sh  environment.yml  pyproject.toml  requirements-ci.txt  requirements.txt  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: programmatic_setup.py  proxy_config.yaml
litellm_a2a_settlement/: __init__.py  config.py  handler.py  prompts.py  redaction.py  schema.py
tests/: conftest.py  test_config.py  test_handler.py  test_mediation_flow.py  test_prompts.py  test_redaction.py  test_schema.py  test_smoke.py
