[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litellm-a2a-settlement"
version = "0.1.0"
description = "LiteLLM callback for A2A Settlement Exchange escrow-based task settlement"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["a2a", "settlement", "litellm", "ai-agents", "escrow"]
dependencies = [
    "litellm>=1.80.0",
    "a2a-settlement>=0.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/a2a-settlement/litellm-a2a-settlement"
Exchange = "https://exchange.a2a-settlement.org"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["litellm_a2a_settlement*"]
